Add PrintGCCause analysis.